<resources>
    <string name="app_name">MusicApp</string>
    <string name="music_app">Music App</string>
    <string name="title1">Chào mừng bạn đến với Music App</string>
    <string name="title2">Nơi nâng tầm cảm hứng của bạn</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="tieptuc">Tiếp tục</string>
    <string name="dangnhapfree">Đăng ký miễn phí</string>
    <string name="dangnhapgoogle">Đăng nhập bằng Google</string>
    <string name="back">back</string>
    <string name="email">Email hoặc tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="titleInput1">Email hoặc tên người dùng</string>
    <string name="titlePassword">Mật khẩu</string>
    <string name="forgotPassword">Bạn quên mật khẩu ?</string>
    <string name="ConfirmPassword">Xác nhận mật khẩu</string>
    <string name="hello">Xin chào</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="libraries">Thư viện</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Nhạc</string>
    <string name="posdcasts">Posdcasts</string>
    <string name="dangky">Đăng ký</string>
    <string name="titleCanhBao">Sử dụng ít nhất 10 ký tự.</string>
    <string name="NgaySinh">Ngày sinh của bạn</string>
    <string name="email_forgot_pass">Email liên kết tài khoản</string>
    <string name="nhanlk">Nhận liên kết</string>
    <string name="title_porgot_password">Chúng tôi sẽ gửi cho bạn một email chứa đường liên kết giúp bạn đặt lại mật khẩu</string>
    <string name="default_web_client_id">AIzaSyBe8wZNJMpPC0UuaAErrHuzUkOjoHy99pQ</string>
    <string name="logOut">Đăng Xuất</string>
    <string name="titleSelectTheLike">Chọn 3 nghệ sĩ bạn thích trở lên.</string>
    <string name="me">Tôi</string>
    <string name="canhan">Cá Nhân</string>
    <string name="userName">Họ và Tên</string>
    <string name="birthday">Ngày sinh</string>
    <string name="edit_profile">edit profile</string>
    <string name="t_i_kho_n_v_b_o_m_t">Tài khoản và Bảo mật</string>
    <string name="gi_i_thi_u_b_n_b">Giới thiệu bạn bè</string>
    <string name="ch_nh_s_ch_b_o_m_t">Chính sách bảo mật</string>
    <string name="i_u_kho_n_d_ch_v">Điều khoản dịch vụ</string>
    <string name="th_m_ngh_s">Thêm nghệ sĩ</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="t_n_ngh_s">Tên nghệ sĩ</string>
    <string name="nh_i_di_n">Ảnh đại diện</string>
    <string name="id_ngh_s">ID nghệ sĩ</string>
    <string name="Fingerprint">Đăng nhập bằng vân tay</string>
</resources>