<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.AuthSelectionActivity">

    <ImageView
        android:id="@+id/iconTv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/title1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/title2"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/googleBtn"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_button01"
        android:padding="10dp"
        android:text="@string/dangnhapfree"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/phoneBtn"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_button02"
        android:drawableStart="@drawable/google"
        android:padding="10dp"
        android:text="@string/dangnhapgoogle"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/phoneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginBtn"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_button02"
        android:drawableStart="@drawable/phone"
        android:padding="10dp"
        android:text="Đăng nhập bằng số điện thoại"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:text="@string/dangnhap"
        android:textColor="@color/white" />

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Wave"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/gradient1"
            tools:ignore="RedundantNamespace" />

</RelativeLayout>