<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_forgot_pass"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInput1"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/ic_email_gray"
                android:drawablePadding="10dp"
                android:hint="@string/email_forgot_pass"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/checkEmail"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_porgot_password"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgotPassBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            android:text="@string/nhanlk"
            android:textColor="@color/white" />


    </RelativeLayout>

</RelativeLayout>