<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black1"
    tools:context=".fragmentes.SettingUserFragment">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/canhan"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_logout_white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:padding="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_gray"
            app:shapeAppearanceOverlay="@style/styleRoundedCornersImage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/profileIv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/userName"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/featureList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:orientation="vertical"
        android:background="@drawable/shape_settingprofile"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RelativeLayout
            android:id="@+id/profileSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconSettingProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_person_gray" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iconSettingProfile"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/t_i_kho_n_v_b_o_m_t"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_keyboard_white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/profileSetting"
            android:id="@+id/shared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconShared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_share_white" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iconShared"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gi_i_thi_u_b_n_b"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_keyboard_white" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/featureList"
        android:orientation="vertical"
        android:background="@drawable/shape_settingprofile"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RelativeLayout
            android:id="@+id/security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_security_white" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iconSecurity"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ch_nh_s_ch_b_o_m_t"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_keyboard_white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/security"
            android:id="@+id/introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconIntroduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_notes_white" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iconIntroduce"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/i_u_kho_n_d_ch_v"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_keyboard_white" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/extend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policy"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_settingprofile"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/autoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel.fragment.onRelativeLayoutClicked}">

            <ImageView
                android:id="@+id/autoLoginImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:padding="5dp"
                android:src="@drawable/ic_fingerprint_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/autoLoginImage"
                android:text="@string/Fingerprint"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>